# ConciliaIA

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.monitoring  LICENSE  Makefile  README.md  SCRIPTS-REFERENCE.md  alembic.ini  coverage.xml  debug_env.py  docker-compose.quality-intelligence.yml  docker-compose.yml  fix-final.ps1  init-db-manual.ps1  init.sql  jest.config.js  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  tsconfig.jest.json  tsconfig.json  validate-backend.ps1  vitest.config.ts
alembic/: env.py  env.py.backup
conciliaai-frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
deployment/: README.md
docs/: ACQUIRER_INTEGRATIONS.md  API-ENDPOINTS.md  API-REFERENCE.md  ARCHITECTURE-DECISIONS.md  ARCHITECTURE-DIAGRAMS.md  ARCHITECTURE-POSTURE.md  ARCHITECTURE.md  CERTIFICATION-GUIDE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONFIGURATION-GUIDE.md  CONTRIBUTING.md  COST-OPTIMIZATION.md  DEPLOYMENT-GUIDE.md  DEVELOPMENT-GUIDE.md  DOCUMENTATION-STRUCTURE.md  EXAMPLES.md  FRONTEND-SPECIFICATION.md  GETTING-STARTED.md  HANDOFF-DOCUMENT.md  IMPLEMENTATION-CHECKLIST.md  MIGRATION-v6-to-v7.md  MULTI-REGION.md  ONBOARDING.md  ORCHESTRATION-GUIDE.md  PERFORMANCE-TUNING.md  RELATORIO-CONSOLIDADO.md  RUNBOOK.md  SCRIPTS-REFERENCE.md  SECURITY.md  SQUAD-PERSONAS.md  TECHNOLOGY-STACK.md  TROUBLESHOOTING.md  WORKAROUND-AUTH.md  migration_plan.md
examples/: cielo_ingestion_example.py  stone_ingestion_example.py
migrations/: 001_initial_schema.sql  002_add_password_to_users.sql  002_create_users_table.sql
prisma/: schema.prisma
scripts/: __init__.py  check_performance_regression.py  create-schema.sql  deploy-phase1-alpha.sh  fix-db.ps1  fix-db.sh  fix-permissions.sh  fix-schema-and-env.ps1  gates-v7.sh  generate_migration.ps1  generate_test_password.py  init-db.ps1  init-tenant.ps1  init-v7.sh  migrate-v6-to-v7.sh  reset-db.ps1  reset-db.sh  run_k6_load_tests.sh  run_load_tests.sh  run_migrations.py  run_performance_tests.sh  seed_database.py  seed_mvp.py  seed_test_user.py  setup-complete.sh  setup_frontend.sh  smoke-test-console.js  test_rede_edi_upload.sh  validate-setup.sh  validate_rede_files.py
src/: App.tsx  app.ts  artifacts_analyzer.py  code_extractor.py  (+4 more)
(+539 files in other folders)
